--- a/databases/postgresql73-server/files/pgsql.sh.tmpl
+++ b/databases/postgresql73-server/files/pgsql.sh.tmpl
@@ -1,6 +1,6 @@
 #!/bin/sh
 
-# $FreeBSD: ports/databases/postgresql80-server/files/pgsql.sh.tmpl,v 1.18 2005/02/15 00:30:50 girgen Exp $
+# $FreeBSD: ports/databases/postgresql73-server/files/pgsql.sh.tmpl,v 1.16 2005/03/19 03:51:44 girgen Exp $
 #
 # PROVIDE: postgresql
 # REQUIRE: LOGIN
@@ -35,7 +35,7 @@ postgresql_class=${postgresql_class:-"default"}
 name=postgresql
 rcvar=`set_rcvar`
 command=${prefix}/bin/pg_ctl
-command_args="-D ${postgresql_data} ${postgresql_flags} $1"
+command_args="-D ${postgresql_data} ${postgresql_flags}"
 extra_commands="reload initdb"
 
 start_cmd="postgresql_command start"
@@ -48,7 +48,7 @@ initdb_cmd="postgresql_initdb"
 
 postgresql_command()
 {
-    su -l ${postgresql_user} -c "exec ${command} ${command_args}"
+    su -l ${postgresql_user} -c "exec ${command} ${command_args} ${rc_arg}"
 }
     
 postgresql_initdb()
